apps/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio
  namespace: dev
spec:
  hosts:
  - minio-dev.k8s
  gateways:
  - istio-ingress/my-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: minio-console
        port:
          number: 9001
